[package]
name = "rproxy"
version = "0.1.7"
authors = ["Rong Xian <rong.xian@gmail.com>"]
description = "Platform independent asynchronous UDP/TCP proxy"
homepage = "https://github.com/glacierx/rproxy"
repository = "https://github.com/glacierx/rproxy"
readme = "README.md"
keywords = ["proxy", "TCP", "UDP", "async","openvpn"]
categories = ["command-line-utilities", "network-programming"]
license = "MIT"
edition="2018"
exclude = [
    ".gitignore",
    "Cargo.toml.orig",
    "Cargo.lock",
]

[dependencies]
getopts = "0.2"
rand = "0.8.4"
pin-project-internal = "1.0.12"
async-trait = "0.1.64"
tokio= { version = "1.25.0", features = ["full"] }
log4rs = {version = "1.1.1"}
futures= "0.3.26"
crossbeam="0.8.1"
log = { version = "0.4", features = ["std", "serde"] }
chrono={ version = "0.4"}
cargo-strip= {version = "0.2.3"}
serde={ version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_repr = "0.1.10"
argh = "0.1.7"

[profile.release]
#strip = true  # Automatically strip symbols from the binary.
opt-level = 3
lto = true
codegen-units = 1